crates/ditto-checker/tests/golden/type-errors/type_not_a_function_0.ditto
module Test exports (..);

huh : Bool(Int) = True;
